<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.dlr.proseo</groupId>
	<artifactId>proseo</artifactId>
	<version>0.7.0</version>
	<name>prosEO</name>
	<description>prosEO – A Processing System for Earth Observation Data</description>
	<packaging>pom</packaging>

	<url>https://github.com/dlr-eoc/prosEO</url>
	<organization>
		<name>DLR - Deutsches Zentrum für Luft- und Raumfahrt e. V.</name>
		<url>http://www.dlr.de</url>
	</organization>

	<parent>
		<!-- Your own application should inherit from spring-boot-starter-parent -->
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.6.RELEASE</version>
	</parent>

	<scm>
		<url>https://github.com/dlr-eoc/prosEO</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<docker-maven-version>0.31.0</docker-maven-version>
		<raml-plugin-version>2.0.5</raml-plugin-version>
		<raml-output-path>target/generated-raml-mvc</raml-output-path>
		<maven-site-plugin.version>3.9.1</maven-site-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
		<maven-project-info-reports-plugin.version>3.1.1</maven-project-info-reports-plugin.version>
		<junit.version>4.13.1</junit.version>
		<spring-boot-starter-test.version>2.1.6.RELEASE</spring-boot-starter-test.version>
	</properties>

	<modules>
		<module>ingestor</module>
		<module>model</module>
		<module>planner</module>
		<module>samples</module>
		<module>order-mgr</module>
		<module>productclass-mgr</module>
		<module>processor-mgr</module>
		<module>ui</module>
		<module>base-wrapper</module>
		<module>storage-mgr</module>
		<module>interfaces</module>
		<module>api</module>
		<module>user-mgr</module>
		<module>facility-mgr</module>
		<module>common</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot-starter-test.version}</version>
				<exclusions>
					<exclusion>
						<groupId>xml-apis</groupId>
						<artifactId>xml-apis</artifactId>
					</exclusion>
				</exclusions>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.phoenixnap.oss</groupId>
				<artifactId>springmvc-raml-plugin</artifactId>
				<version>${raml-plugin-version}</version>
				<exclusions>
					<exclusion>
						<groupId>xml-apis</groupId>
						<artifactId>xml-apis</artifactId>
					</exclusion>
					<exclusion>
						<groupId>xerces</groupId>
						<artifactId>xmlParserAPIs</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.json</groupId>
						<artifactId>json</artifactId>
					</exclusion>
				</exclusions>
				<type>maven-plugin</type>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<site>
			<id>prosEO</id>
			<name>prosEO Local Site</name>
			<url>file:target/staged-site</url>
		</site>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
				<reportSets>
					<reportSet>
						<inherited>true</inherited>
						<reports>
							<report>index</report>
							<report>modules</report>
							<report>scm</report>
							<report>summary</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<!-- Create Javadoc files for the main and test classes -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<failOnError>false</failOnError>
					<quiet>true</quiet>
					<show>package</show>
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                </configuration>
				<reportSets>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
						<inherited>true</inherited>
					</reportSet>
					<reportSet>
						<id>aggregate</id>
						<reports>
							<report>aggregate</report>
						</reports>
						<inherited>false</inherited>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Make sure correct Java version is used -->
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<!-- PhoenixNAP RAML Code Generator plugin used to generate sources from raml -->
				<plugin>
					<groupId>com.phoenixnap.oss</groupId>
					<artifactId>springmvc-raml-plugin</artifactId>
					<version>${raml-plugin-version}</version>
					<configuration>
						<!-- path to raml file -->
						<ramlPath>${raml-path}</ramlPath>
						<!-- output of generated code -->
						<outputRelativePath>${raml-output-path}</outputRelativePath>
						<addTimestampFolder>false</addTimestampFolder>
						<!-- package for generated sources -->
						<basePackage>${raml-base-package}</basePackage>
						<seperateMethodsByContentType>false</seperateMethodsByContentType>
						<useJackson1xCompatibility>false</useJackson1xCompatibility>
						<overrideNamingLogicWith>DISPLAY_NAME</overrideNamingLogicWith>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>
</project>